# rust-skel

./: Cargo.toml  Cross.toml  Dockerfile  README.md  TRACING.md
.cargo/: config.toml  config.toml.docker
src/: main.rs  requestid.rs  setup.rs
