[package]
name = "rust-skel"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.12.1", features = ["http2", "secure-cookies"] }
anyhow = "1.0.100"
bytes = "1.11.0"
console-subscriber = "0.5.0"
futures-util = "0.3.31"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = [
  "http-proto",
  "reqwest",
  "tokio",
  "grpc-tonic",
] }
opentelemetry_sdk = "0.31.0"
rand = "0.9.2"
tokio = { version = "1.48.0", features = ["full", "tracing"] }
tracing = "0.1.43"
tracing-actix-web = { version = "0.7.19", features = ["uuid_v7", "opentelemetry_0_30"] }
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[profile.release]
# debug = true
strip = true
opt-level = "z"  # optimize for size
lto = true
codegen-units = 1
panic = "abort"
